--- a/www/style.css
+++ b/www/style.css
@@ -5,71 +5,29 @@ html, body {
   align-items: center;
 
   justify-content: center;
-
-  height: 100%;
-
+  
   margin: 0px;
 
   padding: 0px;
 
-font-family: "Times New Roman", Times, serif;
+  font-family: "Times New Roman", Times, serif;
 
-color: rgb(35, 35, 35);
+  color: rgb(35, 35, 35);
 
-}
-
-
-
-.wrapper {
-
-  max-width: 100%;
-
-  display: flex;
-
-  flex-direction: row;
-
-  height: 100%;
-
- background: linear-gradient(to top, paleturquoise 0%, mediumturquoise 100%);
-
-background-repeat: no-repeat;
-
-  background-size: cover;
+  background: paleturquoise;
 
 }
 
-.right {
-
-  margin: 0px;
-
-  max-width: 100%;
-
-  flex: 1;
-
-  display: flex;
-
-  flex-direction: column;
-
-  justify-content: inline;
-
-  left: 100px;
-
-  right: 0;
-
-font-size: 20px;
-
+p, li, ul {
+  font-size: 14pt;
 }
 
+h1{
+  font-size: 18pt;
+}
 
-
-.left {
-
-  width: 280px;
-
-text-align: center;
-
-font-size: 25px;
-
+.subtitle{
+  text-align: center;
 }
 
 .quote{
@@ -150,6 +108,12 @@ margin-left: 25px;
 
 }
 
+.space5 {
+
+margin-left: 25px;
+
+}
+
 .space3 {
 
 margin-left: 33px;
@@ -169,4 +133,17 @@ margin-left: 89px;
     border-radius: 100px 100px;
    margin-top: 20px;
 
+}
+
+.ND_pic {
+
+    border: 2px solid rgb(35, 35, 35);
+    padding: 0px;
+    border-radius: 25px 25px;
+    margin-top: 20px;
+
+}
+
+.ND_pic:hover {
+    border: 5px solid green;
 }
